// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetPickerModalNetwork renders modal with no network list by default 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal multichain-asset-picker__network-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-0 mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <h4
                class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
              >
                Select network
              </h4>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box multichain-asset-picker__network-list mm-box--display-flex mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            />
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`AssetPickerModalNetwork should not show selected network when network prop is not passed in 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal multichain-asset-picker__network-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-0 mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <h4
                class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
              >
                Select network
              </h4>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box multichain-asset-picker__network-list mm-box--display-flex mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            >
              <div
                class="gap-4 items-center justify-between pt-4 pr-4 pb-4 pl-4 bg-transparent multichain-network-list-item w-full flex multichain-network-list-item--deselected"
                data-testid="network-list-item-0x1"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
                >
                  <img
                    alt="Ethereum"
                    class="size-full object-contain"
                    src="./images/eth_logo.svg"
                  />
                </div>
                <div
                  class="flex-col items-start justify-start w-full overflow-hidden flex"
                >
                  <div
                    class="items-center w-full flex"
                    data-testid="Ethereum"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <div
                          class="text-default font-default truncate"
                          tabindex="0"
                        >
                          Ethereum
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="gap-4 items-center justify-between pt-4 pr-4 pb-4 pl-4 bg-transparent multichain-network-list-item w-full flex multichain-network-list-item--deselected"
                data-testid="network-list-item-0xa"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
                >
                  <img
                    alt="OP"
                    class="size-full object-contain"
                    src="./images/optimism.svg"
                  />
                </div>
                <div
                  class="flex-col items-start justify-start w-full overflow-hidden flex"
                >
                  <div
                    class="items-center w-full flex"
                    data-testid="OP"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <div
                          class="text-default font-default truncate"
                          tabindex="0"
                        >
                          OP
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`AssetPickerModalNetwork should use passed in network as default when network prop is passed in 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal multichain-asset-picker__network-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-0 mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box"
              style="min-width: 0px;"
            >
              <button
                aria-label="Back"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/arrow-left.svg');"
                />
              </button>
            </div>
            <div
              class="mm-box mm-box--width-full"
            >
              <h4
                class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
              >
                Select network
              </h4>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box multichain-asset-picker__network-list mm-box--display-flex mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            >
              <div
                class="gap-4 items-center justify-between pt-4 pr-4 pb-4 pl-4 bg-primary-muted multichain-network-list-item w-full flex multichain-network-list-item--selected"
                data-testid="network-list-item-0x1"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
                >
                  <img
                    alt="Ethereum"
                    class="size-full object-contain"
                    src="./images/eth_logo.svg"
                  />
                </div>
                <div
                  class="flex-col items-start justify-start w-full overflow-hidden flex"
                >
                  <div
                    class="items-center w-full flex"
                    data-testid="Ethereum"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <div
                          class="text-default font-default truncate"
                          tabindex="0"
                        >
                          Ethereum
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="gap-4 items-center justify-between pt-4 pr-4 pb-4 pl-4 bg-transparent multichain-network-list-item w-full flex multichain-network-list-item--deselected"
                data-testid="network-list-item-0xa"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
                >
                  <img
                    alt="OP"
                    class="size-full object-contain"
                    src="./images/optimism.svg"
                  />
                </div>
                <div
                  class="flex-col items-start justify-start w-full overflow-hidden flex"
                >
                  <div
                    class="items-center w-full flex"
                    data-testid="OP"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <div
                          class="text-default font-default truncate"
                          tabindex="0"
                        >
                          OP
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
